2007-05-24  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-01-00
	* note that V01-00-00 was tagged by whomever for the plugins
	framework change
	* this version is in line with EventFilter/FUShmBuffer V00-04-00
	and EventFilter/ResourceBroker V00-07-00

2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-01
	* make FUShmReader 'pset-less': no (dummy) pset needs to be
	provided for the configuration of the DaqSource anymore

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* based on EventFilter/ShmBuffer V00-03-00

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* depend on EventFilter/ShmBuffer instead of
	EventFilter/ResourceBroker
	* adjust to API typo fix of FUShmBuffer: shm_dettach -> shm_detach
	* (yet another) fix to shutdown procedure.

2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-01
	* fix to shutdown procedure.

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* compliant with FWCore reorganziation in 140 series.

2007-03-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-04
	* this is actually V00-01-01 plus adjusting to the reorganization
	of FWCore.

	
2007-03-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-03
	* set event_ pointer to 0 before exiting event loop, needed for
	stop/start of FUEP.

2007-02-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* minor fixes
 	
2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-01
	* adapt ShmBuffer interface change w.r.t. event discardal
	* interpret empty buffer cells being passed as the signal to shut
	down
	

2007-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* call 'ShmBuffer::scheduleForDiscard()' if event is processed,